Issue #3190021 by MrPaulDriver: Media modal sidebar is too narrow

--- a/styles/components/_claro_improvements.scss
+++ b/styles/components/_claro_improvements.scss
@@ -54,11 +54,6 @@ details summary {
   }
 }
 
-// Claro upload widget
-.ui-dialog .media-library-wrapper .media-library-menu {
-  max-width: 10%;
-}
-
 // Autocomplete z-index issue
 .ui-autocomplete {
   z-index: 2000;
